workspace-sf/force-app/main/default/objects/ArquivoECMIntegra__x/ArquivoECMIntegra__x.object-meta.xml
<CustomObject>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>public$arquivoecmintegra</externalName>
    <label>Arquivo ECM Integra</label>
    <pluralLabel>Arquivos ECM Integra</pluralLabel>
</CustomObject>