workspace-sf/force-app/main/default/objects/ArquivoECMIntegra__x/fields/DataInclusao__c.field-meta.xml
<CustomField>
    <fullName>DataInclusao__c</fullName>
    <externalDeveloperName>datainclusao</externalDeveloperName>
    <label>Data de Inclusão</label>
    <type>Date</type>
</CustomField>