workspace-sf/force-app/main/default/objects/ArquivoECMIntegra__x/fields/IdContext__c.field-meta.xml
<CustomField>
    <fullName>IdContext__c</fullName>
    <externalDeveloperName>idcontext</externalDeveloperName>
    <label>Id Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>