workspace-sf/force-app/main/default/objects/ArquivoECMIntegra__x/fields/IdECM__c.field-meta.xml
<CustomField>
    <fullName>IdECM__c</fullName>
    <externalDeveloperName>idecm</externalDeveloperName>
    <label>Id ECM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>