workspace-sf/force-app/main/default/objects/ArquivoECMIntegra__x/fields/IdSF__c.field-meta.xml
<CustomField>
    <fullName>IdSF__c</fullName>
    <externalDeveloperName>idsf</externalDeveloperName>
    <label>Id SF</label>
    <length>18</length>
    <type>Text</type>
</CustomField>