workspace-sf/force-app/main/default/objects/ArquivoECMIntegra__x/fields/NomeArquivo__c.field-meta.xml
<CustomField>
    <fullName>NomeArquivo__c</fullName>
    <externalDeveloperName>nomearquivo</externalDeveloperName>
    <label>Nome do Arquivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>