workspace-sf/force-app/main/default/objects/ArquivoECMIntegra__x/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <externalDeveloperName>status</externalDeveloperName>
    <label>Status</label>
    <length>18</length>
    <type>Text</type>
</CustomField>