workspace-sf/force-app/main/default/objects/ArquivoECMIntegra__x/fields/TipoArquivo__c.field-meta.xml
<CustomField>
    <fullName>TipoArquivo__c</fullName>
    <externalDeveloperName>tipoarquivo</externalDeveloperName>
    <label>Tipo de Arquivo</label>
    <length>32</length>
    <type>Text</type>
</CustomField>