workspace-sf/force-app/main/default/objects/ArquivoECMIntegra__x/listViews/Todos_os_Arquivos.listView-meta.xml
<ListView>
    <fullName>Todos_os_Arquivos</fullName>
    <columns>Id__c</columns>
    <columns>NomeArquivo__c</columns>
    <columns>IdContext__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos os Arquivos</label>
</ListView>